Primer commit github, con variables de entorno

--- a/web/index.html
+++ b/web/index.html
@@ -1,19 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
   <base href="$FLUTTER_BASE_HREF">
 
   <meta charset="UTF-8">
@@ -26,7 +13,6 @@
   <meta name="apple-mobile-web-app-title" content="tuprocesoya">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
@@ -37,17 +23,35 @@
     // The value below is injected by flutter build, do not touch.
     const serviceWorkerVersion = null;
   </script>
+
+  <!-- Carga env.json ANTES de inicializar Flutter -->
+  <script>
+    window.loadEnvConfig = async function() {
+      try {
+        const response = await fetch('env.json');
+        if (response.ok) {
+          window.env = await response.json();
+        } else {
+          console.error("⚠ No se pudo cargar env.json. Verifica que el archivo exista.");
+        }
+      } catch (error) {
+        console.error("❌ Error cargando env.json:", error);
+      }
+    };
+  </script>
+
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
 <body>
-  <script>
-    window.addEventListener('load', function(ev) {
-      // Download main.dart.js
+<script>
+    window.addEventListener('load', async function(ev) {
+      // 🔹 Asegurarse de que env.json se cargue antes de inicializar Flutter
+      await window.loadEnvConfig();
+
+      // 🔥 Descargar main.dart.js
       _flutter.loader.loadEntrypoint({
-        serviceWorker: {
-          serviceWorkerVersion: serviceWorkerVersion,
-        },
+        serviceWorker: { serviceWorkerVersion: serviceWorkerVersion },
         onEntrypointLoaded: function(engineInitializer) {
           engineInitializer.initializeEngine().then(function(appRunner) {
             appRunner.runApp();
