Se colocan las validaciones en celular y cedula de solicitudes domiciliaria y condicional, se arregla la interfaz de la pagina mis pagos del user, se corrije la interfaz de la pagina de info de ambas, se corrijen los iconos y se mejora el boton. Se inicia la construccion de la pagina atender libertad condicional

--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,8 @@
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="Appjurídica">
 
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
