Se crea el historial de solicitudes de permiso de 72 horas para user, se deja funcional el boton de solicitar el permiso en el home derechos penitenciaros, se crea la info previa solictud permiso 72 horas, y se cambian algunos textos de las demas solicitudes, se deja opcional el subir la declaracion de insolvencia, iguialmente se crea la solicitud exitosa del permiso 72 horas, se configura el pag o por wompy. Se inicia la configuracion de pago rechazado de solicitud permiso 72 horas

--- a/web/index.html
+++ b/web/index.html
@@ -101,8 +101,8 @@
 
 <!-- 🟣 Splash visual -->
 <div id="splash-screen">
-  <img src="assets/images/logo_tu_proceso_ya_transparente.png" alt="Tu Proceso Ya" style="width: 180px; height: auto;">
-  <div id="loader" style="width: 45px; height: 45px; margin-top: 25px;"></div>
+
+  <div id="loader" style="width: 60px; height: 60px;"></div>
   <p style="margin-top: 14px; font-size: 16px; color: #444;">Espera un momento...</p>
 </div>
 
