--- a/web/index.html
+++ b/web/index.html
@@ -2,23 +2,19 @@
 <html>
 <head>
   <base href="$FLUTTER_BASE_HREF">
-
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Appjurídica">
+  <meta name="description" content="App jurídica">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
 
-  <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="Tu proceso Ya">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Favicon -->
   <link rel="icon" type="image/png" sizes="512x512" href="favicon500.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="favicon500.png" />
-
 
   <title>Tu proceso Ya</title>
   <link rel="manifest" href="manifest.json">
@@ -29,71 +25,57 @@
   <script src="flutter.js" defer></script>
 
   <style>
-  /* Splash screen visual */
-  #splash-screen {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    z-index: 9999;
-    padding: 20px;
-  }
+    /* Splash screen visual */
+    #splash-screen {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background-color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+      padding: 20px;
+    }
 
-  #splash-screen img {
-    width: 180px;
-    height: auto;
-    animation: fadeIn 1.2s ease-in-out;
-  }
-
-  #loader {
-    margin-top: 25px;
-    width: 45px;
-    height: 45px;
-    border: 5px solid #ccc;
-    border-top: 5px solid #7b1fa2; /* Deep purple */
-    border-radius: 50%;
-    animation: spin 1s linear infinite;
-  }
-
-  #splash-screen p {
-    margin-top: 14px;
-    font-size: 16px;
-    color: #444;
-  }
-
-  @keyframes fadeIn {
-    from { opacity: 0; transform: scale(0.9); }
-    to { opacity: 1; transform: scale(1); }
-  }
-
-  @keyframes spin {
-    from { transform: rotate(0deg); }
-    to { transform: rotate(360deg); }
-  }
-
-  @media (max-width: 600px) {
     #splash-screen img {
-      width: 150px;
+      width: 180px;
+      height: auto;
+      animation: fadeIn 1.2s ease-in-out;
     }
 
     #loader {
-      width: 35px;
-      height: 35px;
+      margin-top: 25px;
+      width: 45px;
+      height: 45px;
+      border: 5px solid #ccc;
+      border-top: 5px solid #7b1fa2; /* Deep purple */
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
     }
 
     #splash-screen p {
-      font-size: 14px;
+      margin-top: 14px;
+      font-size: 16px;
+      color: #444;
     }
-  }
-</style>
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.9); }
+      to { opacity: 1; transform: scale(1); }
+    }
+
+    @keyframes spin {
+      from { transform: rotate(0deg); }
+      to { transform: rotate(360deg); }
+    }
+  </style>
 
 </head>
+
 <body>
 
 <!-- 🔐 reCAPTCHA container -->
@@ -101,11 +83,10 @@
 
 <!-- 🟣 Splash visual -->
 <div id="splash-screen">
-
-  <div id="loader" style="width: 60px; height: 60px;"></div>
+  <img src="assets/images/logo_tu_proceso_ya_transparente.png" alt="Tu Proceso Ya" style="width: 180px; height: auto;">
+  <div id="loader" style="width: 45px; height: 45px; margin-top: 25px;"></div>
   <p style="margin-top: 14px; font-size: 16px; color: #444;">Espera un momento...</p>
 </div>
-
 
 <script>
   window.addEventListener('load', function () {
@@ -124,12 +105,14 @@
   });
 </script>
 
-<!-- ♻️ reCAPTCHA styles conservados -->
+<!-- ♻️ reCAPTCHA styles corregidos para CENTRAR -->
+
 <style>
   #recaptcha-container {
     position: fixed;
-    bottom: 20px;
-    right: 20px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); /* 👈 Esto lo centra perfectamente */
     z-index: 10000;
     background-color: white;
     padding: 12px;
@@ -141,27 +124,15 @@
     display: none;
   }
 
-  @media (max-width: 600px) {
-    #recaptcha-container {
-      bottom: 10px;
-      right: 10px;
-      transform: scale(0.9);
-      transform-origin: bottom right;
-      width: auto;
-      max-width: 90vw;
-      box-sizing: border-box;
-    }
-
-    iframe[title="recaptcha challenge"] {
-      position: fixed !important;
-      top: 50% !important;
-      left: 50% !important;
-      transform: translate(-50%, -50%) scale(0.9) !important;
-      transform-origin: center center !important;
-      z-index: 10001 !important;
-      max-width: 100vw;
-      max-height: 90vh;
-    }
+  iframe[title="recaptcha challenge"] {
+    position: fixed !important;
+    top: 50% !important;
+    left: 50% !important;
+    transform: translate(-50%, -50%) !important; /* 👈 También centramos el iframe */
+    transform-origin: center center !important;
+    z-index: 10001 !important;
+    max-width: 100vw;
+    max-height: 100vh;
   }
 </style>
 
