--- a/web/index.html
+++ b/web/index.html
@@ -83,8 +83,8 @@
 
 <!-- 🟣 Splash visual -->
 <div id="splash-screen">
-  <img src="assets/images/logo_tu_proceso_ya_transparente.png" alt="Tu Proceso Ya" style="width: 180px; height: auto;">
-  <div id="loader" style="width: 45px; height: 45px; margin-top: 25px;"></div>
+  <p style="margin-bottom: 14px; font-size: 18px; color: #444;">Tu Proceso Ya</p>
+  <div id="loader" style="width: 60px; height: 60px; margin-top: 25px;"></div>
   <p style="margin-top: 14px; font-size: 16px; color: #444;">Espera un momento...</p>
 </div>
 
