--- a/web/index.html
+++ b/web/index.html
@@ -28,10 +28,9 @@
     /* Splash screen visual */
     #splash-screen {
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       background-color: white;
       display: flex;
       flex-direction: column;
@@ -40,6 +39,7 @@
       z-index: 9999;
       padding: 20px;
     }
+
 
     #splash-screen img {
       width: 180px;
@@ -83,9 +83,8 @@
 
 <!-- 🟣 Splash visual -->
 <div id="splash-screen">
-  <p style="margin-bottom: 14px; font-size: 18px; color: #444;">Tu Proceso Ya</p>
   <div id="loader" style="width: 60px; height: 60px; margin-top: 25px;"></div>
-  <p style="margin-top: 14px; font-size: 16px; color: #444;">Espera un momento...</p>
+  <p style="margin-top: 14px; font-size: 14px; color: #444;">Espera un momento...</p>
 </div>
 
 <script>
