--- a/web/index.html
+++ b/web/index.html
@@ -28,9 +28,10 @@
     /* Splash screen visual */
     #splash-screen {
       position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
       background-color: white;
       display: flex;
       flex-direction: column;
@@ -39,7 +40,6 @@
       z-index: 9999;
       padding: 20px;
     }
-
 
     #splash-screen img {
       width: 180px;
@@ -83,8 +83,9 @@
 
 <!-- 🟣 Splash visual -->
 <div id="splash-screen">
+  <p style="margin-bottom: 14px; font-size: 18px; color: #444;">Tu Proceso Ya</p>
   <div id="loader" style="width: 60px; height: 60px; margin-top: 25px;"></div>
-  <p style="margin-top: 14px; font-size: 14px; color: #444;">Espera un momento...</p>
+  <p style="margin-top: 14px; font-size: 16px; color: #444;">Espera un momento...</p>
 </div>
 
 <script>
