--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,9 @@
   <meta name="apple-mobile-web-app-title" content="Tu proceso Ya">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- ✅ Meta de verificación de dominio de Facebook -->
+  <meta name="facebook-domain-verification" content="h11nga3jmpcclcd95ixqgzflpvjhbg" />
+
   <link rel="icon" type="image/png" sizes="512x512" href="favicon500.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="favicon500.png" />
 
