--- a/web/index.html
+++ b/web/index.html
@@ -27,6 +27,16 @@
   </script>
   <script src="flutter.js" defer></script>
 
+  <!-- ✅ Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SKF90LGH2B"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-SKF90LGH2B');
+  </script>
+
   <style>
     /* Splash screen visual */
     #splash-screen {
@@ -114,7 +124,7 @@
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); /* 👈 Esto lo centra perfectamente */
+    transform: translate(-50%, -50%);
     z-index: 10000;
     background-color: white;
     padding: 12px;
@@ -130,7 +140,7 @@
     position: fixed !important;
     top: 50% !important;
     left: 50% !important;
-    transform: translate(-50%, -50%) !important; /* 👈 También centramos el iframe */
+    transform: translate(-50%, -50%) !important;
     transform-origin: center center !important;
     z-index: 10001 !important;
     max-width: 100vw;
